--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,8 @@
 FROM node:20-alpine
 
+# Installer OpenSSL pour Prisma
+RUN apk add --no-cache openssl
+
 WORKDIR /app
 
 # Copier les fichiers de dépendances
@@ -11,5 +14,5 @@ RUN npm install
 # Exposer le port
 EXPOSE 3000
 
-# Démarrer en mode développement avec legacy watch (fonctionne mieux avec Docker sur Windows)
-CMD ["npm", "run", "start:dev:legacy"]
+# Générer Prisma et démarrer l'app
+CMD sh -c "npx prisma generate && npm run start:dev:legacy"
