add : pgAdmin interface in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     container_name: reservation-postgres
     restart: unless-stopped
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB:-reservation_db}
+      POSTGRES_USER: ${POSTGRES_USER:-reservation_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-reservation_password}
     ports:
       - "5432:5432"
     volumes:
@@ -15,10 +15,25 @@ services:
     networks:
       - reservation-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      test: ["CMD-SHELL", "pg_isready -U reservation_user -d reservation_db"]
       interval: 10s
       timeout: 5s
       retries: 5
+
+  # pgAdmin - Interface graphique pour PostgreSQL
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: reservation-pgadmin
+    restart: unless-stopped
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@reservation.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    networks:
+      - reservation-network
+    depends_on:
+      - postgres
 
   # Application NestJS (Production)
   app:
@@ -29,6 +44,7 @@ services:
     restart: unless-stopped
     ports:
       - "3000:3000"
+      - "5555:5555"
     environment:
       NODE_ENV: production
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public
@@ -49,6 +65,7 @@ services:
     restart: unless-stopped
     ports:
       - "3000:3000"
+      - "5555:5555"
     environment:
       NODE_ENV: development
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public
