--- a/env.example
+++ b/env.example
@@ -1,6 +1,4 @@
 # PostgreSQL
-POSTGRES_DB=reservation_db
-POSTGRES_USER=your_user
 POSTGRES_PASSWORD=your_password
 
 # Application
@@ -9,7 +7,7 @@ PORT=3000
 
 # Database URL for Prisma
 # Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public
-DATABASE_URL=postgresql://your_user:your_password@localhost:5432/reservation_db?schema=public
+DATABASE_URL=postgresql://postgres:your_password@localhost:5432/reservation_db?schema=public
 
 # JWT (pour l'authentification future)
 JWT_SECRET=your-secret-key-change-this-in-production
