--- a/robust-reservation-engine/Dockerfile.dev
+++ b/robust-reservation-engine/Dockerfile.dev
@@ -1,18 +1,25 @@
 FROM node:20-alpine
 
-# Installer OpenSSL pour Prisma
-RUN apk add --no-cache openssl
-
 WORKDIR /app
+
+# Installer OpenSSL et autres dépendances système requises par Prisma
+RUN apk add --no-cache openssl libc6-compat
 
 # Copier les fichiers de dépendances
 COPY package*.json ./
 
-# Installer toutes les dépendances (dev incluses)
-RUN npm install
+# Installer les dépendances
+RUN npm ci
 
-# Exposer le port
+# Copier le code source
+COPY . .
+
+# Générer le client Prisma
+RUN npx prisma generate
+
+# Exposer les ports
 EXPOSE 3000
+EXPOSE 5555
 
-# Générer Prisma et démarrer l'app
-CMD sh -c "npx prisma generate && npm run start:dev:legacy"
+# Démarrer en mode développement avec hot reload
+CMD ["npm", "run", "start:dev"]
